fixed the responsive Navbar on Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,8 @@
     background-position: center center;
 }
 
+.love-icon {
+    color: black; 
+    font-size: 20px; 
+    vertical-align: middle; 
+  }
